--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ atom_feed.hide           : true
 description              : &description "personal description"
 url                      : https://judydy0417.github.io/taolis.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "Judydy0417/taolis.github.io"
+repository               : "Judydy0417/Prof-TaoLi.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
