--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 name                     : &name "Tao Li"
 atom_feed.hide           : true
 description              : &description "personal description"
-url                      : https://judydy0417.github.io/taolis.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://judydy0417.github.io/Prof-TaoLi.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Judydy0417/Prof-TaoLi.github.io"
 
